releases/0.2.7/Synapse-local-test-guide.md
# Synapse 0.2.7 — Apple 메시지 읽기·텍스트/사진 전송 로컬 알파

Apple Silicon(M1 이상)용입니다. macOS 13 이상을 빌드 대상으로 설정했으며 검증 환경은 macOS 26.6.2, Swift 6.3.3입니다. 다른 OS 버전은 실기기 검증 전입니다.

## 설치와 연결

1. `Synapse-0.2.7-arm64.dmg`를 열고 **Synapse**를 **Applications(응용 프로그램)** 폴더로 드래그합니다. 기존 앱이 실행 중이면 먼저 종료하세요.
2. Synapse를 실행합니다. 처음에는 합성 샘플 대화가 표시됩니다.
3. 샘플 대화를 선택하고 아래 작성창에서 텍스트를 쓴 뒤 **샘플 전송**을 누르면 작성 흐름을 테스트할 수 있습니다. 실제 전송은 없습니다.
4. **메시지 연결**을 누릅니다. 접근 안내가 나오면 시스템 설정 → 개인정보 보호 및 보안 → 전체 디스크 접근 권한에서 `Synapse.app`을 추가하고 켭니다.
5. 앱을 완전히 종료한 다음 다시 실행하고 **메시지 연결**을 누릅니다.
6. 메시지를 읽은 뒤 나타나는 macOS 연락처 권한 창에서 **허용**을 선택합니다. 저장된 이름과 이니셜이 표시됩니다. 거부한 경우 **연락처 권한 설정**에서 변경한 뒤 앱으로 돌아오세요.

개인 테스트용 ad-hoc 서명이며 Apple Developer ID 서명·공증은 없습니다. macOS가 실행을 차단하면 개인정보 보호 및 보안에서 해당 앱의 ‘확인 없이 열기’ 항목을 확인하세요. 시스템 전체 보안 기능을 끌 필요는 없습니다. 앱 교체 시 접근 권한을 다시 설정해야 할 수 있습니다.

## 작성과 전송

1. 기존 **iMessage·SMS·RCS 대화**를 선택합니다. 화면 상단의 대화 이름을 확인합니다.
2. 텍스트를 작성합니다. **Enter** 또는 **전송** 버튼은 전송, **Shift+Enter**는 줄바꿈입니다. 한글 등 입력기 조합 중 Enter는 조합을 확정하며 전송하지 않습니다. UTF-8 16,384바이트까지 입력을 전송할 수 있습니다.
3. 첫 전송 시 Synapse가 메시지 앱을 제어하도록 macOS 자동화 권한을 허용합니다. 거부했다면 작성창의 **자동화 설정 열기**에서 Synapse → 메시지 접근을 허용한 뒤 직접 다시 전송합니다.
4. ‘전송 요청됨’은 메시지 앱이 명령을 처리했다는 뜻이며 상대방 수신 보장은 아닙니다. 실제 배달 상태는 Apple 메시지 앱에서 확인하세요.

전송 중 추가 전송·연결 전환은 차단합니다. 실패하면 초안을 유지합니다. **전송 결과 불명**이면 메시지 앱에서 실제 전송 여부를 확인하고, 작성창의 확인 버튼으로 잠금을 푼 뒤 필요한 경우에만 수동 전송하세요. 자동 재시도는 없습니다.

대화별 초안은 메모리에만 남으며 **연결 해제·앱 종료 시 지워집니다**. 재실행 후 다시 연결해야 하며 이전 전송을 자동 재개하지 않습니다. 샘플과 **DB 선택**으로 연 파일에서는 실제 발신하지 않습니다. 기존 iMessage·SMS·RCS 대화에서만 보낼 수 있습니다.

## 지원 범위

- 내려받은 첨부 이미지 미리보기·클릭 확대, 읽기 실패 시 재시도
- 최근 최대 2,000개 메시지 열람, 대화/본문 검색, 5초 자동 갱신, 수동 갱신(⌘R)
- 일반 텍스트·일부 표준 attributedBody 본문, 한국어·이모지
- 기존 iMessage·SMS·RCS 1:1·그룹 대화의 텍스트·사진 전송 경로
- 연락처 권한 허용 시 저장된 이름·이니셜 표시 및 이름/번호 검색
- 대화별 메모리 초안, 중복 클릭 차단, 권한 거부·대상 불일치·결과 불명 표시
- 원본 chat.db는 읽기 전용으로 접근. 전송은 Apple 메시지 앱 명령으로 수행

새 대화 시작, 동영상·일반 파일·리액션 전송, 메시지 수정·삭제, 영속 outbox와 배달 확인은 미지원입니다. SMS/RCS 수신 표시는 Apple 메시지 앱의 동기화·iPhone 전달 설정에 따릅니다. 일부 본문 형식과 원본 편집·삭제는 완전히 반영되지 않을 수 있습니다.

## 검증 결과와 남은 실기기 확인

- 읽기 계층 **44개 검사**, 전송 계층 **54개 검사**, 연락처 **31개 검사**, 입력·이미지 **21개 검사**, 사진 전송 **24개 검사**(총 174개) 통과. 잘린/임의 바이너리 입력 검증 포함.
- 정확한 Apple event 문자열 인수 전달, AppleScript 컴파일, 합성 전송 성공·권한 거부·대상 불일치, helper 비정상 응답·종료·타임아웃 검증.
- 샘플 발신 격리, 가져온 DB 전송 차단, 중복 클릭, 전송 도중 대화 전환, 초안 보존·정리 검증.
- 실제 macOS 앱에서 한국어·이모지·줄바꿈 작성, 대화 전환 시 초안 복원, Enter 합성 전송·Shift+Enter 줄바꿈·초안 초기화 및 화면 배치를 확인했습니다.
- 실제 계정에 메시지를 보내는 자동 테스트는 수행하지 않습니다.
- 합성 연락처 미리보기에서 영문·한국어 이니셜, 미등록 번호 아이콘, 작성창 및 짧은 전송 상태 표시를 확인했습니다.
- 합성 이미지 말풍선·클릭 확대, Shift+Enter 두 줄 입력·Enter 전송을 실제 macOS 테스트 화면에서 확인했습니다.
- 제공된 Threads 링크의 실제 로컬 캐시에서 주 썸네일(1024×939) 디코딩을 확인했습니다.
- 미검증: 모든 개인 첨부 형식, 실제 연락처 권한 승인 및 사용자 연락처 일치, 실제 계정 전송/배달, 실제 전체 디스크 접근 및 자동화 권한 승인·거부·철회, DMG에서 Applications로 설치, 다른 macOS 버전.

## 소스와 재빌드

`Synapse-0.2.7-source.zip`을 풀고 프로젝트 루트에서 실행합니다.

```sh
bash native/scripts/test.sh
bash native/scripts/build.sh
bash native/scripts/package.sh
```

앱과 DMG는 `native/build/`에 생성됩니다. 원본 프로젝트 경로는 `/Users/pete/Desktop/playground/2026-synapse`입니다.

## 0.2.2 수정

0.2.1에서 남겨 두었던 RCS·SMS 발신 제한을 제거했습니다. 기존 iMessage·SMS·RCS 대화에 작성창을 제공하고 Apple 메시지 앱의 같은 대화로 전송을 요청합니다. 실제 로컬 DB 모델 검사에서 iMessage 10개, SMS 26개, RCS 6개 대화가 작성 및 전송 요청 가능한 상태임을 확인했습니다. 서비스 불명 대화와 가져온 DB는 전송하지 않습니다.

RCS·SMS 발신은 Mac과 iPhone의 연결 및 문자 메시지 전달 설정에 따릅니다. 실제 상대방 배달까지 자동 검증한 것은 아닙니다.

화면에 제시된 실제 RCS 대화와 이전 iMessage 대화는 발신 없는 `--check-target` 검사에서 모두 `ready`로 확인했습니다. RCS 계정의 비활성 플래그로 정상 대화를 차단하던 사전 검사도 제거했습니다.

## 0.2.3 수정

번호 대신 저장된 연락처 이름을 표시하고, 원형 아이콘도 같은 이름의 이니셜로 맞췄습니다. 미등록 번호는 번호와 사람 아이콘으로 표시합니다. 중복 연락처의 이름도 표시합니다. 명시된 그룹·업체 이름은 유지합니다. 연락처 이름은 메모리에만 보관하며 연결 해제·앱 종료 시 지워집니다.

입력창 위에 반복되던 수신자·서비스·내부 ID를 제거했습니다. 성공 상태는 입력창 아래 ‘전송 요청됨’으로 간략히 표시하며 다음 내용을 작성하면 사라집니다. 실제 발신 대상과 오류·결과 불명 처리는 유지됩니다.

## 0.2.4 수정: Enter 전송과 이미지 보기

- **Enter**: 전송. **Shift+Enter**: 줄바꿈. 한글 조합 중 Enter는 조합 확정에 사용합니다.
- **메시지 연결** 후 내려받은 첨부 이미지를 대화 안에서 볼 수 있습니다. 이미지를 클릭하면 확대하고, Esc 또는 닫기로 돌아옵니다.
- JPG·PNG·HEIC 등 macOS가 해독하는 이미지 형식을 지원합니다. GIF는 첫 프레임만 표시합니다.
- 이미지가 안 뜨면 Apple 메시지 앱에서 다운로드 상태와 Synapse의 전체 디스크 접근 권한을 확인한 뒤 **다시 불러오기**를 누르세요. 50 MiB 초과 파일·손상 파일은 미리보기하지 않습니다.
- **DB 선택**으로 가져온 파일은 이미지 경로만으로 개인 파일을 읽지 않습니다. 이미지는 실제 메시지 연결에서 확인하세요.

이번 변경은 받은/기존 첨부 이미지 보기입니다. 사진 전송은 0.2.7에서 추가했으며 동영상 재생은 미지원입니다.

## 0.2.5 수정

- 이름 표시: 이제 메시지 연결 직후 연락처 권한을 요청합니다. **허용**해야 이름이 표시됩니다. Mac 연락처에 없는 번호는 번호로 남습니다.
- 링크 미리보기: 메시지 앱에 저장된 링크 썸네일과 제목을 표시하며 길고 불필요한 내부 첨부 파일명을 숨깁니다. 캐시가 없는 링크를 새로 다운로드하지는 않습니다.
- 입력창: 기본 한 줄로 표시하고 줄바꿈·긴 입력에 맞춰 높이가 늘어납니다. 전송 후에는 다시 한 줄로 돌아옵니다. Enter 전송·Shift+Enter 줄바꿈은 그대로입니다.

## 0.2.6 수정

- 같은 번호의 연락처가 여러 계정에 있으면 이름이 숨겨지던 오류를 수정했습니다. 같은 이름은 한 번, 서로 다른 저장 이름은 /로 구분해 표시합니다. 연락처를 합치거나 수정하지 않습니다.
- 사진 위와 대화 목록에 물음표 상자로 나타나던 내부 첨부 표시 문자를 제거했습니다. 사진만 있는 메시지는 목록에 첨부파일로 표시합니다.

## 0.2.7 사진 보내기

1. 기존 대화를 선택하고 입력창 왼쪽 **+**를 누릅니다.
2. 이 Mac에 내려받은 사진 한 장을 선택합니다. JPG·PNG·HEIC·GIF·WebP, 최대 20 MB를 지원합니다.
3. 미리보기와 파일명을 확인합니다. 취소하려면 사진 옆 **×**를 누릅니다.
4. **사진 전송**을 누르거나 입력창에서 **Enter**를 누릅니다. 사진을 고른 상태에서는 사진만 보내며 작성한 글은 그대로 남습니다. 글은 다음 전송으로 보내세요.
5. Apple 메시지 앱에서 사진과 배달 상태를 확인하세요. 전송이 확인될 때까지 원본 파일을 이동하거나 삭제하지 마세요.

한 번에 여러 사진·동영상·일반 파일 전송, 이미지 붙여넣기는 아직 지원하지 않습니다. 별도 사진 복사본을 만들지 않고 선택한 원본 파일을 메시지 앱으로 전달합니다. 원본 사진을 수정·이동했다면 다시 선택해야 합니다. 사진 선택 상태는 대화별 메모리에만 남으며 앱 종료·연결 해제 시 지워집니다.

샘플 사진 전송은 실제 발신하지 않습니다. 실제 RCS 대화·파일을 전송 없이 확인하는 검사에서 ready를 받았으며, 실제 사진 배달까지 검증한 것은 아닙니다. SMS 대화의 사진 전달 가능 여부는 Apple 메시지 앱과 iPhone의 MMS/RCS 지원·연결 상태에 따릅니다.
